--- a/agenda-auto-pwa/src/app/modules/consumables/consumables.page.html
+++ b/agenda-auto-pwa/src/app/modules/consumables/consumables.page.html
@@ -3,19 +3,43 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Consumables</ion-title>
+    <ion-title>Consumabile</ion-title>
   </ion-toolbar>
+
+  <div class="ion-padding header-next-events">
+    <ion-text color="tertiary"> Urmatoarele evenimente</ion-text>
+    <div class="header-document" *ngFor="let consumable of (consumables$ | async) | slice: 0:3">
+      <div class="left"><ion-icon class="alarm-icon" name="alarm"></ion-icon>{{consumable.type }}</div>
+      <div class="right">{{ consumable.expirationDate| dateFormat : 'd.M.y' }}</div>
+    </div>
+  </div>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Consumables</ion-title>
+      <ion-title size="large">Consumabile</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong class="capitalize">Consumables</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <div class="container-document ion-padding ion-margin" *ngFor="let consumable of (consumables$ | async)">
+      <ion-icon class="delete-icon" name="trash" color="danger" (click)="deleteConsumable(consumable.id)"></ion-icon>
+      <div class="ion-text-center">{{ consumable.type}}</div>
+      <div class="progress-bar-header">
+        <div class="date">{{ consumable.beginDate | dateFormat : 'd.M.y'}}</div>
+        <div class="date">{{ consumable.expirationDate | dateFormat : 'd.M.y'}}</div>
+      </div>
+      <div class="progress-bar ion-margin-bottom">
+        <div class="filled" [style.width.%]="consumable.percentagePassed"></div>
+        <div class="progress-bar-text ion-text-center">{{ consumable.daysRemaining}} zile ramase</div>
+      </div>
+    </div>
   </div>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="navigateToAddConsumable()" color="tertiary">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
