add translation to types

--- a/agenda-auto-pwa/src/app/modules/add-consumable/add-consumable.page.html
+++ b/agenda-auto-pwa/src/app/modules/add-consumable/add-consumable.page.html
@@ -20,7 +20,7 @@
           [value]="consumableType"
           *ngFor="let consumableType of consumableTypes"
         >
-          {{consumableType}}
+          {{consumableType | consumableTypeToken | transloco}}
         </ion-select-option>
       </ion-select>
     </ion-item>
