--- a/agenda-auto-pwa/src/app/modules/documents/documents.page.html
+++ b/agenda-auto-pwa/src/app/modules/documents/documents.page.html
@@ -9,7 +9,7 @@
   <div class="ion-padding header-next-events">
     <ion-text color="tertiary"> Urmatoarele evenimente</ion-text>
     <div class="header-document" *ngFor="let document of (documents$ | async) | slice: 0:3">
-      <div class="left"><ion-icon class="alarm-icon" name="alarm"></ion-icon>{{document.type }}</div>
+      <div class="left"><ion-icon class="alarm-icon" name="alarm"></ion-icon>{{document.type | documentTypeToken | transloco}}</div>
       <div class="right">{{ document.expirationDate| dateFormat : 'd.M.y' }}</div>
     </div>
   </div>
@@ -25,7 +25,7 @@
   <div id="container">
     <div class="container-document ion-padding ion-margin" *ngFor="let document of (documents$ | async)">
       <ion-icon class="delete-icon" name="trash" color="danger" (click)="deleteDocument(document.id)"></ion-icon>
-      <div class="ion-text-center">{{ document.type}}</div>
+      <div class="ion-text-center">{{ document.type | documentTypeToken | transloco}}</div>
       <div class="progress-bar-header">
         <div class="date">{{ document.beginDate | dateFormat : 'd.M.y'}}</div>
         <div class="date">{{ document.expirationDate | dateFormat : 'd.M.y'}}</div>
