--- a/agenda-auto-pwa/src/app/modules/add-document/add-document.page.html
+++ b/agenda-auto-pwa/src/app/modules/add-document/add-document.page.html
@@ -13,7 +13,7 @@
           <ion-label>Tip Document*</ion-label>
           <ion-select interface="popover" [formControl]="documentTypeControl" placeholder="Select One">
             <ion-select-option [value]="documentType" *ngFor="let documentType of documentTypes">
-              {{documentType}}
+              {{documentType | documentTypeToken | transloco}}
             </ion-select-option>
           </ion-select>
         </ion-item>
