--- a/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.html
+++ b/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.html
@@ -8,6 +8,8 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <button (click)="getIcs()">TEST</button>
+
   <div id="container">
     <div class="title-container">
       <div class="logo">
