add iphone add to homescreen prompt

--- a/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.html
+++ b/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.html
@@ -49,3 +49,8 @@
     </ion-fab-list>
   </ion-fab>
 </ion-content>
+
+<div class="install-tooltip" @fadeInOut *ngIf="showIcon$ | async">
+    Instaleaza aplicatia pe Iphone apasand <ion-icon class="share-icon" name="share-outline"></ion-icon> si apoi "Add to homescreen"
+</div>
+
