--- a/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.scss
+++ b/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.scss
@@ -2,6 +2,41 @@ ion-menu-button {
   color: var(--ion-color-primary);
 }
 
+.install-tooltip {
+  background: white;
+  position: absolute;
+  bottom: 24px;
+  width: 96%;
+  color: black;
+  border-radius: 8px;
+  padding: 4px 8px 8px 8px;
+  margin: 8px;
+  margin: 0 auto;
+  text-align: center;
+  left: 0;
+  right: 0;
+  z-index: 999;
+
+  .share-icon {
+    font-size: 30px;
+    vertical-align: bottom;
+  }
+
+  &::before{
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    position: absolute;
+    border-left: 18px solid transparent;
+    border-right: 18px solid transparent;
+    border-top: 18px solid white;
+    left: calc(50% - 9px);
+    top: 99%;
+    margin: 0 auto;
+  }
+}
+
 #container {
   display: flex;
   flex-direction: column;
