add check for safari

--- a/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.html
+++ b/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.html
@@ -50,7 +50,7 @@
   </ion-fab>
 </ion-content>
 
-<div class="install-tooltip" @fadeInOut *ngIf="showIcon$ | async">
+<div class="install-tooltip" @fadeInOut *ngIf="showInstallTooltip$ | async">
     Instaleaza aplicatia pe Iphone apasand <ion-icon class="share-icon" name="share-outline"></ion-icon> si apoi "Add to homescreen"
 </div>
 
