add google auth

--- a/agenda-auto-pwa/src/app/modules/login/login.page.html
+++ b/agenda-auto-pwa/src/app/modules/login/login.page.html
@@ -37,4 +37,15 @@
       </ion-col>
     </ion-row>
   </form>
+    <div class="separator">
+      <div class="separator-text">SAU</div>
+    </div>
+    <div class="other-sign-in-container">
+      <ion-button (click)="signInWithGoogle()">
+        <ion-icon slot="start" name="logo-google"></ion-icon>
+        Continua cu Google
+      </ion-button>
+    </div>
+
+
 </ion-content>
