--- a/agenda-auto-pwa/src/app/modules/login/login.page.scss
+++ b/agenda-auto-pwa/src/app/modules/login/login.page.scss
@@ -4,3 +4,27 @@
   align-items: center;
   gap: var(--ion-padding);
 }
+
+.separator {
+  opacity: .6;
+  width: 100%;
+  height: 1px;
+  position: relative;
+  margin: 24px 0;
+  background-color: var(--ion-color-dark);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .separator-text {
+    padding: 0px 8px;
+    text-align: center;
+    background-color: var(--ion-background-color);
+  }
+}
+
+.other-sign-in-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
